--- a/package.json
+++ b/package.json
@@ -100,5 +100,5 @@
     "test": "nyc ava --verbose --serial"
   },
   "types": "./dist/src/index.d.ts",
-  "version": "0.0.0-development"
+  "version": "30.1.2"
 }
