--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "semantic-release": "^17.3.8",
     "sinon": "^9.2.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "4.1.3"
   },
   "engines": {
     "node": ">=10.0"
