--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "delay": "^5.0.0",
     "es6-error": "^4.1.1",
     "get-stack-trace": "^2.0.3",
-    "hyperid": "^2.1.0",
+    "hyperid": "2.1.0",
     "is-plain-object": "^5.0.0",
     "iso8601-duration": "^1.3.0",
     "pg": "^8.5.1",
     "pg-connection-string": "^2.4.0",
     "pg-copy-streams": "^5.1.1",
-    "pg-copy-streams-binary": "^2.0.1",
+    "pg-copy-streams-binary": "2.0.1",
     "pg-cursor": "^2.5.2",
     "postgres-array": "^3.0.1",
     "postgres-interval": "^3.0.0",
-    "roarr": "^4.0.11",
-    "serialize-error": "^8.0.1",
+    "roarr": "4.0.11",
+    "serialize-error": "8.0.1",
     "through2": "^4.0.2"
   },
   "description": "A PostgreSQL client with strict types, detailed logging and assertions.",
