--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   ],
   "license": "BSD-3-Clause",
   "main": "./dist/src/index.js",
-  "name": "slonik",
+  "name": "@getodk/slonik",
   "nyc": {
     "all": true,
     "exclude": [
@@ -104,5 +104,5 @@
     "type-check": "tsc -p ."
   },
   "types": "./dist/src/index.d.ts",
-  "version": "23.6.2-stream-patch-1"
+  "version": "23.6.2.1"
 }
