--- a/.eslintrc
+++ b/.eslintrc
@@ -29,8 +29,10 @@
     "@typescript-eslint/no-non-null-assertion": 1,
     "@typescript-eslint/no-unused-vars": 1,
     "@typescript-eslint/prefer-ts-expect-error": 1,
+    "@typescript-eslint/restrict-plus-operands": 0,
     "import/no-cycle": 0,
     "import/no-default-export": 1,
+    "import/no-named-as-default-member": 0,
     "import/no-unresolved": 0,
     "linebreak-style": 0,
     "no-continue": 0,
