--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   "scripts": {
     "build": "rm -fr ./dist && tsc -p tsconfig.lib.json",
     "create-readme": "gitdown ./.README/README.md --output-file ./README.md",
-    "eslint": "eslint --ext '.ts'",
+    "eslint": "eslint --cache --ext '.ts'",
     "lint": "npm run eslint ./src ./test && npm run type-check",
     "test": "NODE_ENV=test nyc ava --verbose",
     "type-check": "tsc -p ."
