try force build on gha

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,3 +1,9 @@
+name: Test and build
+on:
+  push:
+    branches: master
+  pull_request:
+
 jobs:
   lint:
     environment: release
@@ -84,8 +90,3 @@ jobs:
           - 20
       max-parallel: 3
     timeout-minutes: 10
-name: Lint, build and release
-on:
-  push:
-    branches:
-      - main
