--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -95,18 +95,4 @@ jobs:
     timeout-minutes: 10
 name: Test and build
 on:
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - '.editorconfig'
-      - '.husky/**'
-      - '.lintstagedrc.js'
-      - '.mergify.yml'
-      - '.nvmrc'
-      - 'README.md'
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - ready_for_review
+  push:
